--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "thinkboard-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "type": "module",
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.6.0",
     "express": "^4.18.2",
+    "mongoose": "^8.16.1",
     "nodemon": "^3.1.10"
   }
 }
