--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10"
   }
